# pico_hostname_resolver

./: .gitignore  README.md  build.sh
pico_hostname_resolver/: CMakeLists.txt
pico_hostname_resolver/src/: pico_dns_resolver.c
src/: main.c  pico_dns_resolver.c  pico_dns_resolver.h  secret_wifi_creds.h
